--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "pretest": "bin/auto-export.js",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "start": "http-server build"
   },
   "repository": {
     "type": "git",
